Fix for spacing issues

--- a/src/main/webapp/app/css/trips_bootstrap.css
+++ b/src/main/webapp/app/css/trips_bootstrap.css
@@ -23,7 +23,6 @@
 	margin-left: 3px;
 	margin-top: 15px;
 	float: left;
-	width: 120px;
 	height: 103px;
 }
 .nonCollapsedTripDetails .tripDateDiv p {
@@ -52,8 +51,7 @@
   	margin-left: 20px;
  	margin-top: 15px;
 	margin-bottom: 0px;
-	height: 103px;
-	width: 260px;
+
 }
 .tripDateDiv .header { 
 	padding-top: 15px;
@@ -76,7 +74,6 @@
 	margin-bottom: 0px;
 	margin-top: 15px;
 }
-
 .middleContent {
 	font-family: ARIAL;
 	font-size: 12px;
@@ -84,26 +81,7 @@
 	margin-left: 20px;
 	margin-top: 0px;
 	margin-bottom: 0px;
-
 }
-
-.collapsedMiddleContent {
-	font-family: ARIAL;
-	font-size: 12px;
-	color: #6F6F6F;
-	margin-top: 0px;
-	margin-bottom: 0px;
-	  padding-top: 5px;
-}
-.collapsedHeaderDetails {
-	font-family: ARIAL;
-	font-weight: bold;
-	font-size: 12px;
-	color: #6F6F6F;
-	margin-bottom: 0px;
-	margin-top: 15px;
-}
-
 .footerDetails{
   font-family: ARIAL;
   font-size: 12px;
@@ -156,107 +134,4 @@
 	margin-top: 60px;
   	margin-left: 10px;
 }
-
-
-
-
-.collapsedTripDetails {
-	height: 103px;
-}
-.collapsedTripDetails .tripDetails {
-	float: left;
-	background-color: #F3F3F3;
-	margin-left: 3px;
-	margin-top: 15px;
-	float: left;
-	width: 390px;
-	height: 103px;
-}
-.collapsedTripDetails .tripDetails .title {
-	  margin-top: 15px;
-  margin-left: 20px;
-}
-.collapsedTripDetails .tripDetails .tripDateDiv {
-  margin-left: 20px;
-  float: left;
-  margin-right: 20px;
-
-}
-.collapsedTripDetails .tripDetails .tripDateDiv .header{
-  margin-top: 0px;
-  margin-bottom: 0px;
-  margin-bottom: 0px;
-  padding-bottom: 3px;
-  font-family: Arial;
-  font-weight: normal;
-  font-size: 12px;
-  color: #6F6F6F;
-}
-}
-.collapsedTripDetails .tripDetails .tripDateDiv .footerDay
-{
-  margin-top: 0px;
-  font-family: arial;
-  font-weight: bold;
-  color: #4D4F53;
-  font-size: 12px;
-}
-.collapsedTripDetails .tripDetails .tripDateDiv .footerDate
-{
-  margin-top: 0px;
-  font-family: arial;
-  font-weight: normal;
-  color: #6F6F6F;
-  font-size: 12px;
-}
-.rightAlign {
-  float: right;
-  margin-right: 20px;
-}
-
-.collapsedTripDetails .airTripDetails ,
-.collapsedTripDetails .hotelTripDetails,
-.collapsedTripDetails .carTripDetails,
-.collapsedTripDetails .cruiseTripDetails {
-  margin-left: 20px;
-  float: left;
-}
-
-.airTripDetails .departs .midContent{
-  margin-left: 5px;
-  margin-right: 5px;
-  font-weight: bold;
-}
-.airTripDetails .arrives .midContent{
-	margin-left: 10px;
-  margin-right: 3px;
-  font-weight: bold;
-
-}
-.hotelTripDetails .middleContent,
-.carTripDetails .middleContent,
-cruiseTripDetails .middleContent {
-	  padding-top: 5px;
-}
-.airTripDetails .departs {
-	margin-top: 15px;
-  font-size: 12px;
-  font-family: arial;
-  font-weight: normal;
-  color: #6F6F6F;
-}
-.airTripDetails .arrives {
-  margin-top: 5px;
-  font-size: 12px;
-  font-family: arial;
-  font-weight: normal;
-    color: #6F6F6F;
-}
-.verticalLine {
-  border-left: 1px solid #D5D5D5;
-  float: left;
-  height: 35px;
-  margin-top: 15px;
-}
-
 
